发布 3.9.0